# asok-is

./: .env  .env.example  .gitignore  .gitlab-ci.yml  .vscodelaunch.json  IMPLEMENTATION.md  QUICKSTART.md  README_TEMPLATES.md  SOLUTION_MANIFEST.md  SOLUTION_SUMMARY.md  TESTING_GUIDE.md  USER_EXPERIENCE.md  docker-compose.gpu.yml  docker-compose.override.yml  docker-compose.yml  merge.sh  merge_script.py  ~$зарисовки качества.xlsx
backend/: .dockerignore  .env  alembic.ini  diagnose.ps1  dockerfile  dockerfile.cuda  pyproject.toml  requirements.txt  test_api.http
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_excel_matrices.py  003_risk_base.py  004_unmeasurable_flag.py  005_professional_judgments.py  006_ai_quality_gost59898.py  007_ai_weights_e2.py  008_proposals.py  009_tech_incidents.py  010_incident_fields.py
backend/app/: ARCHITECTURE.md  init_db.py  main.py
backend/app/api/: deps.py
backend/app/constants/: quality_model.py
backend/app/core/: config.py  database.py  rbac.py  security.py
backend/app/db/: base.py  session.py  session.py.txt
backend/app/infrastructure/: __init__.py  config.py  database.py  redis.py  workers.py
backend/app/models/: assessment.py  audit.py  base_mixin.py  matrices.py  metric_catalog.py  risk_base.py  system.py  user.py
backend/app/modules/: __init__.py
backend/app/schemas/: assessment.py  auth.py  common.py  metric.py  risk_base.py
backend/app/scripts/: export_llm_dataset.py  init_db.py  seed_demo.py  seed_governance.py  seed_metrics.py  (+5 more)
backend/llm/: Modelfile  train_lora.py
backend/llm_dataset/: judgments_sft.jsonl
backend/tests/: conftest.py  test_ai_calculation.py  test_architecture.py  test_brain.py  test_calculator.py  test_config_security.py  test_e2e_dashboards.py  test_excel_helpers.py  test_gate.py  test_governance.py  test_governance_e2e.py  test_incidents.py  test_incidents_e2e.py  test_llm_model_agnostic.py  test_llm_service.py  test_periods.py  test_quality_model.py  test_reasoning.py  test_security.py  test_seed_scenarios.py
backend/uploads/: 4eaaad65-0edc-4311-8488-d70fe95f1206_шаблон предоставления информации для тест-менеджера после анализа LLM.xlsx  8dc6ae7d-868c-4244-812c-4506304a0263_таблица для заполнения v8.1.xlsx  e0dd2187-833c-4642-876a-9e6990e93636_шаблон заполнения метрик.xlsx  f1a5f239-ee93-4d40-ab20-e2da22a9390a_Качество системы в разрезе времени по всем характеристикам.xlsx  f9855639-8280-4278-bb5a-ea7a3420680c_шаблон формирования детального отчета по каждой метрике.xlsx
(+183 files in other folders)
